# Ogu

./: .gitignore  CHANGELOG.md  Cargo.toml  OGU-0.3-es.md  README.md
ogu/: Cargo.toml
ogu-lang/: Cargo.toml
ogu-lang/src/: lib.rs
ogu-lang/src/backend/: banner.rs  compiler.rs  errors.rs  mod.rs  params.rs
ogu-lang/src/backend/modules/: mod.rs  module.rs
ogu-lang/src/backend/modules/symbols/: funcs.rs  idents.rs  macro_sym.rs  mod.rs  values.rs
ogu-lang/src/backend/modules/tests/: cond_exprs.rs  func_decls.rs  lambdas.rs  letswheres.rs  logical.rs  mod.rs  paren_ops.rs  test_cond_exprs.rs  test_curry.rs  (+16 more)
ogu-lang/src/backend/scopes/: mod.rs  scopes.rs  sym_table.rs  symbol.rs  types.rs
ogu-lang/src/codegen/: mod.rs
ogu-lang/src/codegen/transpilers/: mod.rs  rust_transpiler.rs
ogu-lang/src/lexer/: mod.rs  token_stream.rs  tokens.rs
ogu-lang/src/parser/: mod.rs
ogu-lang/src/symbols/: exprs.rs  macros.rs  mod.rs  module.rs  scopes.rs  sym_table.rs  values.rs
ogu-lang/src/symbols/decls/: funcs.rs  mod.rs  types.rs  values.rs
ogu-lang/src/types/: basic.rs  generic.rs  mod.rs
ogu-lang/tests/alg/: ack.ogu  e1.ogu  e10.ogu  e2.ogu  e6.ogu  e9.ogu
ogu-lang/tests/demos/: imc.ogu
ogu-lang/tests/misc/: test1.ogu  test10.ogu  test11.ogu  test16.ogu  test19.ogu  test2.ogu  test20.ogu  test21.ogu  test27.ogu  test29.ogu  test3.ogu  test31.ogu  test32.ogu  test33.ogu  test38.ogu  test4.ogu  test40.ogu  test42.ogu  test43.ogu  test44.ogu  test5.ogu  test51.ogu  test52.ogu  test53.ogu  test6.ogu  test7.ogu  test8.ogu  test9.ogu
ogu/src/: main.rs
(+206 files in other folders)
