[package]
name = "ogu-lang"
version = "0.1.0"
authors = ["Eduardo Díaz <ediaz@dcc8090.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1.3"
structopt = "0.3.20"
logos = "0.11.4"
walkdir = "2.3.1"
anyhow = "1.0.37"
thiserror = "1.0.22"
indoc = "1.0"
mopa = "0.2.2"