[package]
name = "ogu"
version = "0.3.0"
authors = ["Eduardo Díaz <ediaz@dcc8090.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogu-lang = { path = "../ogu-lang" }
figlet-rs = "0.1.3"
structopt = "0.3.20"
logos = "0.11.4"
walkdir = "2.3.1"
anyhow = "1.0.34"
thiserror = "1.0.22"